Labs/Lab07/Kubernetes/k8s-first-deployment/wordpress-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
  - host: wp-test.k8sbeta.init-lab.ch
    http:
      paths:
      - backend:
          service:
            name: wordpress-service
            port:
              number: 80
        path: /
        pathType: Prefix
